# sydes

./: .gitignore  LICENSE  README.md  exported.json  pyproject.toml
examples/: microservices_level6.md  simple_fastapi.md
fixtures/artifacts/: api_contract.json  test_matrix_v2.json
scripts/: build_binary.py  run_sydes_phase32_tests.sh
src/sydes/: __init__.py
src/sydes/cli/: __init__.py  export.py  main.py  (+3 more)
tests/: test_api_contract_builder.py  test_api_contract_enrichment.py  test_artifact_consistency.py  test_call_follower.py  test_cli_contracts.py  test_cli_fastapi_sqlalchemy_regressions.py  test_cli_flask_phase31_regressions.py  test_cli_output_paths.py  test_confidence_scoring.py  test_contract_aware_test_matrix.py  test_contract_llm_refinement.py  test_contract_view.py  test_cross_repo_detection.py  test_cross_repo_linking.py  test_cross_repo_lookup.py  test_deterministic_route_extractors.py  test_discover_pipeline.py  test_discovery_cache.py  test_discovery_coverage.py  test_endpoint_discovery_contract.py  test_evidence_packet.py  test_export_command.py  test_export_postman_command.py  test_flask_route_discovery_regression.py  test_function_body_slicer.py  test_generate_test_matrix.py  test_generate_test_suggestions.py  test_graph_builder.py  test_handler_resolver.py  test_handler_symbol_index.py  test_ingest_file_roles.py  test_ingest_ranking.py  test_ingest_readers.py  test_ingest_sensing.py  test_json_export.py  test_layered_trace_contract.py  test_llm_client_ollama.py  test_mocked_llm_discovery_pipeline.py  test_postman_export.py  test_repo_map.py  (+19 more)
(+56 files in other folders)
