[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sydes"
version = "0.1.0"
description = "CLI-first tool for tracing API flows across multiple repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sydes Contributors" }
]
dependencies = [
  "anthropic>=0.102.0",
  "openai>=2.36.0",
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<1.0",
]

[project.scripts]
sydes = "sydes.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sydes"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
